# k8s_workshop

./: .gitignore  Dockerfile  eks-cluster-config.yml  pyproject.toml  requirements.txt  sealed_secret.pem
.github/workflows/: build-and-push-image.yml
k8s_deployments/: api-deployment.yml  api-service.yml  github_api_secrets_sealed.yml  rabbitmq-controller.yaml  replica_sets.yml  replication_controller.yml  vultr_api_secret_ccm_sealed.yaml  vultr_api_secret_csi_sealed.yaml
src/: app.py  config.py
terraform/: .gitignore  .terraform.lock.hcl  k8s_cluster.tf  outputs.tf  provider.tf  variables.tf  volumes.tf
