[tool.poetry]
name = "k8s_workshop"
version = "1.2.1"
description = ""
authors = ["Ali Sajid Imami <Ali.Sajid.Imami@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
PyGithub = "^1.55"
gunicorn = "^20.1.0"
opentelemetry-distro = "^0.27b0"
opentelemetry-instrumentation-flask = "^0.27b0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
